# animals_image_classification

./: .gitignore  Dockerfile  README.md  app.py  convert_to_onnx.ipynb  final_train.ipynb  predict.py  pyproject.toml  requirements.txt  train.py
