[project]
name = "animals-image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "keras-image-helper>=0.0.2",
    "numpy>=2.4.0",
    "onnxruntime>=1.23.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
